using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StaticValue
{
    public static string ANIM_TRIGGER_IDLE = "isIdle";
    public static string ANIM_TRIGGER_RUN = "isRun";
    public static string ANIM_TRIGGER_IDLE_HOLD = "isIdleHold";
    public static string ANIM_TRIGGER_RUN_HOLD = "isRunHold";

    public static string CHARACTER_NAME_TAG = "Player";
}
